# sasy-demo

./: .env.example  .gitignore  Makefile  README.md  policy.dl  policy_english.md  pyproject.toml
.github/workflows/: deploy-docs.yml  deploy-docs.yml.disabled
benchmarks/tau2-airline/: run.py  run_tau2.py
benchmarks/tau2-airline/paraphrases/: spec_paraphrase_1.md  spec_paraphrase_2.md  spec_paraphrase_3.md  spec_paraphrase_4.md  spec_paraphrase_5.md
benchmarks/tau2-airline/results/_summary/: per_policy.csv  summary.json  summary.md
benchmarks/tau2-airline/results/basic/: tau2_results.json
benchmarks/tau2-airline/results/llm_judge_graph/: tau2_results.json
benchmarks/tau2-airline/results/llm_judge_graph_weak/: tau2_results.json
benchmarks/tau2-airline/results/llm_judge_linear/: tau2_results.json
benchmarks/tau2-airline/results/llm_judge_linear_weak/: tau2_results.json
benchmarks/tau2-airline/results/paraphrase_2/: tau2_results.json
benchmarks/tau2-airline/results/reference/: tau2_results.json
data/: common_policy.dl  db.json
docs/: 01-quickstart.md  02-translate-policy.md  03-policy-walkthrough.md  04-scenarios.md
docs-site/: README.md  astro.config.mjs  package-lock.json
src/customer_demo/: agent.py  config.py  data_model.py  display.py  main.py  scenarios.py  tools.py
src/demo/: agent.py  data_model.py  display.py  main.py  scenarios.py  tool_schema.py  translate_cli.py
tau2-bench/: PATCHES.md
tau2-bench/src/tau2/: run.py
tau2-examples/: README.md  pyproject.toml
tau2-examples/airline/: airline_functors.cpp  airline_policy.dl
tau2-examples/tau2_examples/: __init__.py  cli.py  cli_llm_policy.py
tests/: test_graph_policy.py  test_local_graph_policy.py  test_policy_matrix.py
(+17 files in other folders)
