[project]
name = "sasy-demo"
version = "0.1.0"
description = "SASY airline policy enforcement demo"
requires-python = ">=3.11"
dependencies = [
    "sasy>=0.4.6",
    "openai>=1.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "docstring-parser>=0.16",
]

[project.scripts]
sasy-demo = "demo.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/demo"]
